# CSnake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: utils.h
include/entities/: grid.h  point.h  snake.h  tile.h
src/: main.c  utils.c
src/entities/: grid.c  point.c  snake.c  tile.c
